Bug 1549282 - Remove checkbox-label appearance style for in-content pages to avoid interfering with selection highlight color in dark mode on Linux r=dao
`-moz-appearance: checkbox-label` causes in-content light text to behave like dark text for selection purposes, the primary color is used for the background highlight instead of the alternate. Setting `-moz-appearance: none` for checkbox labels avoids the problem.

Differential Revision: https://phabricator.services.mozilla.com/D29988

UltraBlame original commit: f7f94d7b7d82c247c9c9b9a34d2f0045a07e85dd

--- a/toolkit/themes/linux/global/in-content/common.css
+++ b/toolkit/themes/linux/global/in-content/common.css
@@ -58,6 +58,24 @@ menulist
 label
 -
 box
+xul
+|
+*
+.
+radio
+-
+label
+-
+box
+xul
+|
+*
+.
+checkbox
+-
+label
+-
+box
 {
 -
 moz
@@ -218,24 +236,6 @@ fill
 moz
 -
 fieldText
-;
-}
-xul
-|
-*
-.
-radio
--
-label
--
-box
-{
--
-moz
--
-appearance
-:
-none
 ;
 }
 xul
